# pulse_reader

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
feeds/: models.py  urls.py  views.py
feeds/migrations/: 0001_initial.py
static/css/: base.css
static/favicon/: browserconfig.xml  site.webmanifest
templates/: base.html  feed.html  forgot_password.html  index.html  login.html  register.html  reset_password.html
templates/partials/: feed.html  navbar.html
users/: views.py
users/migrations/: 0001_initial.py
