[tool.poetry]
name = "pulse-reader"
version = "0.1.0"
description = "Free and simple rss reader."
authors = ["ErkamKumru"]
readme = "README.md"
packages = [{include = "pulse_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
feedparser = "^6.0.10"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
